deploy/component-monitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: component-monitor
  namespace: component-monitor
  labels:
    app: component-monitor
spec:
  selector:
    app: component-monitor
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
